# reaper-mcp

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml  reaper_mcp_bridge.lua  reaper_mcp_server.py  reaper_web_server.lua  reaper_web_server.py  test_connection.py
.github/workflows/: ci.yml
tests/: conftest.py  test_tools.py
