[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twelvetake-reaper-mcp"
version = "1.2.1"
description = "MCP server for controlling REAPER DAW - mixing, mastering, MIDI composition, and full music production"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "TwelveTake Studios LLC", email = "contact@twelvetake.com" }
]
keywords = [
    "reaper",
    "daw",
    "mcp",
    "model-context-protocol",
    "music-production",
    "mixing",
    "mastering",
    "midi",
    "audio",
    "claude",
    "ai"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://twelvetake.com"
Repository = "https://github.com/TwelveTake-Studios/reaper-mcp"
Issues = "https://github.com/TwelveTake-Studios/reaper-mcp/issues"
Funding = "https://buymeacoffee.com/twelvetake"

[project.scripts]
twelvetake-reaper-mcp = "reaper_mcp_server:main"

[tool.hatch.build.targets.wheel]
only-include = [
    "reaper_mcp_server.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "reaper_mcp_server.py",
    "reaper_mcp_bridge.lua",
    "reaper_web_server.py",
    "reaper_web_server.lua",
    "README.md",
    "LICENSE",
    "requirements.txt",
    "test_connection.py",
]
exclude = [
    ".claude/",
    ".github/",
    "docs/",
    "assets/",
    "tests/",
    "__pycache__/",
    "*.md",
    "!README.md",
]

[tool.ruff]
line-length = 120
target-version = "py310"
# reaper_web_server.py runs INSIDE REAPER with injected RPR_* globals — it is not a
# standard Python module, so exclude it from linting (and it is deprecated).
extend-exclude = ["reaper_web_server.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
# REAPER bridge globals (RPR_*) are injected at runtime; allow bare except in glue code.
ignore = ["E501", "E722", "F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
